--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,14 +10,10 @@ include_directories(${PROJECT_SOURCE_DIR}/lib)
 
 add_executable(main_uart ${SOURCE})
 
+if (CMAKE_CROSSCOMPILING)
+
 target_link_libraries(main_uart rpiuart)
 
 install (TARGETS main_uart DESTINATION bin)
 
-set(MAJOR "0")
-set(MINOR "1")
-set(PATCH "1")
-set(CPACK_SOURCE_GENERATOR "TGZ")
-set(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${MAJOR}.${MINOR}.${PATCH}")
-set(CPACK_SOURCE_IGNORE_FILES "/build/;${CPACK_SOURCE_IGNORE_FILES}")
-include(CPack)
+endif (CMAKE_CROSSCOMPILING)
