--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,6 @@ target_link_libraries(main_uart rpiuart)
 
 install (TARGETS main_uart DESTINATION bin)
 install (TARGETS rpiuart DESTINATION lib)
-install (FILES rpi-uart.h DESTINATION include)
+install (FILES include/rpi-uart.h DESTINATION include)
 
 endif (CMAKE_CROSSCOMPILING)
