--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../include)
 set(LIBRARY_NAME rpiuart)
 set(SRC_FILES rpi-uart.c)
 set(INCLUDE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/../include/rpi-uart.h)
+set_target_properties (LIBRARY_NAME  PROPERTIES VERSION 1.0 SOVERSION 1)
 
 add_library(${LIBRARY_NAME} SHARED ${SRC_FILES} ${INCLUDE_FILES})
 
